--- a/.github/workflows/check_hysteria2.yml
+++ b/.github/workflows/check_hysteria2.yml
@@ -29,5 +29,5 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          python3 hysteria2/recover_hysteria2.py
+          python3 vless/recover_hysteria2.py
 
